--- a/app-cluster/realtimeapp-source.yaml
+++ b/app-cluster/realtimeapp-source.yaml
@@ -2,11 +2,11 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta1
 kind: GitRepository
 metadata:
-  name: realtimeapp
+  name: realtimeapp-infra
   namespace: flux-system
 spec:
   interval: 30s
   ref:
-    branch: main
-  url: https://github.com/gbaeke/realtimeapp
+    branch: master
+  url: https://github.com/gbaeke/realtimeapp-infra
 
